Beginnings of ratings API integration
