# swagger-server/api/helpers/sqlite.js
@@ -24,6 +24,9 @@ function openDatabase() {
       db.run(
         "CREATE TABLE Profiles (profileID INTEGER PRIMARY KEY AUTOINCREMENT, name TEXT NOT NULL)"
       );
+      db.run(
+        "CREATE TABLE Ratings (ratingID INTEGER PRIMARY KEY AUTOINCREMENT, rating INTEGER NOT NULL, text TEXT NOT NULL, movieTitle text NOT NULL, user TEXT REFERENCES Users(username))"
+      );
     }
   });
   return db;
